newer gradle (5.4.1) newer stardog (5.3.5)