@@ -25,7 +25,9 @@ dependencies {
 	compile "com.complexible.stardog.versioning:stardog-versioning-api:${stardogVersion}"
 	compile "com.complexible.stardog.sesame:stardog-sesame-core:${stardogVersion}"
 
-	testCompile project(path: ":core", configuration: "testRuntime")
+	testCompile(project(path: ":core", configuration: 'testRuntime')) {
+		exclude module: 'cp-common-utils:5.0'
+	}
 
 	// server core modules
 	testCompile "com.complexible.stardog:server:${stardogVersion}"
@@ -42,7 +44,7 @@ test {
 	maxHeapSize = "2g"
 //	debug = true // for attaching the IDE to the gradle cli
 
-	jvmArgs '-XX:MaxPermSize=256m', '-enableassertions'
+	jvmArgs '-enableassertions'
 	if (project.hasProperty("stardogHome")) {
 		jvmArgs "-Dstardog.home=${stardogHome}"
 	}
